--- a/deploy/systemd/grump-backend.service
+++ b/deploy/systemd/grump-backend.service
@@ -1,13 +1,16 @@
 [Unit]
-Description=G-Rump Backend
+Description=G-Rump Backend API Server
+Documentation=https://github.com/Aphrodine-wq/GRUMPCO
 After=network.target redis.service
 
 [Service]
 Type=simple
 User=grump
+Group=grump
 WorkingDirectory=/opt/grump/backend
 Environment=NODE_ENV=production
 Environment=PORT=3000
+EnvironmentFile=-/opt/grump/backend/.env
 ExecStart=/usr/bin/node dist/index.js
 Restart=always
 RestartSec=10
@@ -15,6 +18,14 @@ StandardOutput=journal
 StandardError=journal
 SyslogIdentifier=grump-backend
 
+# Security hardening
+NoNewPrivileges=true
+PrivateTmp=true
+ProtectSystem=strict
+ProtectHome=true
+ReadWritePaths=/opt/grump/backend/data /opt/grump/backend/logs
+
+# Resource limits
 LimitNOFILE=65536
 LimitNPROC=4096
 
