feat: remove OpenAI/Groq/Grok providers, add GitHub Copilot integration
- Refactored llmGateway.ts to support only NIM and GitHub Copilot
- Updated modelRouter.ts with new provider routing logic
- Modified env.ts to add GITHUB_COPILOT_TOKEN configuration
- Updated smartRetry.ts and providerHealth.ts for new providers
- Optimized SWC compiler configuration for faster builds
- Enhanced TypeScript config with incremental compilation

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -18,6 +18,8 @@
     "declaration": true,
     "declarationMap": false,
     "sourceMap": false,
+    "isolatedModules": true,
+    "assumeChangesOnlyAffectDirectDependencies": true,
     "allowJs": true,
     "checkJs": false,
     "noUnusedLocals": false,
@@ -35,6 +37,7 @@
     "strictBindCallApply": true,
     "strictPropertyInitialization": true,
     "noUncheckedIndexedAccess": false,
+    "skipDefaultLibCheck": true,
     "exactOptionalPropertyTypes": false,
     "useUnknownInCatchVariables": true,
     "baseUrl": ".",
