--- a/backend/.swcrc
+++ b/backend/.swcrc
@@ -8,9 +8,34 @@
       "dynamicImport": true
     },
     "target": "es2022",
-    "loose": false,
+    "loose": true,
     "keepClassNames": true,
-    "externalHelpers": false
+    "externalHelpers": false,
+    "transform": {
+      "optimizer": {
+        "globals": {
+          "vars": {
+            "__DEBUG__": "false"
+          }
+        },
+        "simplify": true,
+        "jsonify": {
+          "minCost": 0
+        }
+      },
+      "constModules": {
+        "globals": {
+          "process.env.NODE_ENV": "production"
+        }
+      }
+    },
+    "minify": {
+      "compress": {
+        "unused": true,
+        "dead_code": true
+      },
+      "mangle": false
+    }
   },
   "module": {
     "type": "es6",
@@ -19,7 +44,7 @@
     "lazy": false,
     "noInterop": false
   },
-  "minify": false,
+  "minify": true,
   "sourceMaps": true,
   "inlineSourcesContent": true
 }
