UI: sidebar width, approvals in chat, mode flowchart, input width, Integrations=Settings tab, Model label, empty state, MCP button; ENV docs; dark mode + Theme/Git/Privacy settings; resolve merge conflicts (ours)

--- a/.env.example
+++ b/.env.example
@@ -1,117 +1,22 @@
-# Deployment Environment Configuration
+# =============================================================================
+# Reference only – this file is NOT loaded by the app.
+# Copy backend/.env.example → backend/.env and frontend/.env.example → frontend/.env
+# See ENV_SETUP.md for instructions.
+# =============================================================================
 
-# ============================================
-# REQUIRED VARIABLES - Must be set for deployment
-# ============================================
+# ----- Backend (see backend/.env.example for full list and comments) -----
+# MOCK_AI_MODE=
+# NVIDIA_NIM_API_KEY=
+# NODE_ENV=
+# PORT=
+# CORS_ORIGINS=
+# DB_TYPE=
+# DB_PATH=
+# ... (and many more in backend/.env.example)
 
-# AI Provider API Key (at least one required)
-# Primary: NVIDIA NIM for Kimi K2.5 (recommended - 256K context, $0.6/M tokens)
-# Get from: https://build.nvidia.com/
-NVIDIA_NIM_API_KEY=nvapi-your_key_here
-
-# Alternative: OpenRouter (supports multiple models)
-# Get from: https://openrouter.ai/
-# OPENROUTER_API_KEY=sk-or-v1-your_key_here
-
-# Groq (fast inference provider)
-# Get from: https://groq.com/
-# GROQ_API_KEY=gsk-your_key_here
-
-# Together AI (open source model provider)
-# Get from: https://together.ai/
-# TOGETHER_API_KEY=your_key_here
-
-# Ollama (local model runner)
-# Optional: Override default localhost:11434
-# OLLAMA_HOST=localhost:11434
-
-# ============================================
-# SERVER CONFIGURATION
-# ============================================
-
-NODE_ENV=production
-PORT=3000
-
-# CORS Origins - comma-separated list of allowed origins
-# For production, set this to your frontend domain(s)
-CORS_ORIGINS=https://your-frontend-domain.vercel.app
-
-# Serverless mode for Vercel deployment
-SERVERLESS_MODE=vercel
-
-# Event mode: 'poll' for serverless, 'sse' for traditional servers
-EVENTS_MODE=poll
-
-# Public base URL for webhooks and callbacks
-PUBLIC_BASE_URL=https://your-backend-domain.vercel.app
-
-# ============================================
-# DATABASE - Supabase (Required for Vercel)
-# ============================================
-
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_ANON_KEY=your-anon-key
-SUPABASE_SERVICE_KEY=your-service-key
-
-# ============================================
-# ASYNC JOB QUEUE - QStash (Required for Vercel)
-# ============================================
-
-QSTASH_TOKEN=your_qstash_token
-QSTASH_URL=https://qstash.upstash.io/v2/publish/
-JOB_WORKER_SECRET=your_random_secret_here
-
-# ============================================
-# PRODUCTION SAFEGUARDS (Highly Recommended)
-# ============================================
-
-# Block suspicious prompts (prevents prompt injection)
-BLOCK_SUSPICIOUS_PROMPTS=true
-
-# Require authentication for API access
-REQUIRE_AUTH_FOR_API=true
-
-# ============================================
-# OPTIONAL SERVICES
-# ============================================
-
-# Redis (optional - for caching and rate limiting)
-# REDIS_HOST=your-redis-host
-# REDIS_PORT=6379
-# REDIS_PASSWORD=your-redis-password
-
-# Stripe (optional - for billing)
-# STRIPE_SECRET_KEY=sk_live_...
-# STRIPE_WEBHOOK_SECRET=whsec_...
-
-# Twilio (optional - for messaging)
-# MESSAGING_PROVIDER=twilio
-# TWILIO_ACCOUNT_SID=...
-# TWILIO_AUTH_TOKEN=...
-# TWILIO_REPLY_TO_NUMBER=...
-# TWILIO_WEBHOOK_SECRET=...
-
-# NVIDIA NIM self-hosted (optional - for on-prem deployment)
-# NVIDIA_NIM_URL=https://your-nim-endpoint
-
-# Webhooks
-# GRUMP_WEBHOOK_SECRET=your_webhook_secret
-# GRUMP_WEBHOOK_URLS=https://your-webhook-endpoint
-
-# ============================================
-# DEVELOPMENT ONLY (Not needed for production)
-# ============================================
-
-# Intent compiler path (local development only)
-# GRUMP_INTENT_PATH=../intent-compiler/target/release/intent_compiler
-
-# Docker sandbox (for local code execution)
-# DOCKER_HOST=unix:///var/run/docker.sock
-# SANDBOX_TIMEOUT_MS=60000
-# SANDBOX_MEMORY_LIMIT=512m
-
-# Metrics authentication
-# METRICS_AUTH=user:password
-
-# OpenTelemetry endpoint
-# OTLP_ENDPOINT=https://your-otel-collector
+# ----- Frontend (see frontend/.env.example) -----
+# VITE_API_URL=http://localhost:3000
+# VITE_SUPABASE_URL=
+# VITE_SUPABASE_ANON_KEY=
+# VITE_POSTHOG_API_KEY=
+# VITE_POSTHOG_HOST=
