--- a/backend/.env.example
+++ b/backend/.env.example
@@ -22,12 +22,18 @@ NVIDIA_NIM_API_KEY=nvapi-your_key_here
 
 # Local/self-hosted NIM base URL (e.g. http://nim:8000). When set, /v1 is appended if missing. Omit for cloud.
 NVIDIA_NIM_URL=
-# Embedding batch tuning (optional): NIM_EMBED_BATCH_SIZE (default 256), NIM_EMBED_MAX_WAIT_MS (default 50)
+# Embedding batch tuning (optional)
+# NIM_EMBED_BATCH_SIZE: Number of embeddings per batch (default: 256, range: 1-512)
+# NIM_EMBED_MAX_WAIT_MS: Max wait time to fill batch in milliseconds (default: 50, range: 10-500)
 NIM_EMBED_BATCH_SIZE=
 NIM_EMBED_MAX_WAIT_MS=
 
 # NIM timeouts and retries (optional)
 # Default timeout applies when model-specific values are not set.
+# All timeout values are in MILLISECONDS. Recommended ranges:
+#   - Default: 60000-180000 (1-3 minutes)
+#   - 405B models: 120000-300000 (2-5 minutes, larger models need more time)
+#   - Ultra/Super: 90000-180000 (1.5-3 minutes)
 NIM_RETRY_ENABLED=true
 NIM_TIMEOUT_DEFAULT_MS=120000
 NIM_TIMEOUT_405B_MS=180000
@@ -42,9 +48,17 @@ USE_NEMOTRON_3_FOR_RAG=
 
 # Server
 # Local development:
+# NODE_ENV: "development" or "production"
+# PORT: Server port (default: 3000, range: 1024-65535)
 NODE_ENV=development
 PORT=3000
 CORS_ORIGINS=http://localhost:5173,http://127.0.0.1:5173,http://localhost:5178,http://127.0.0.1:5178,tauri://localhost,http://tauri.localhost
+
+# Figma Integration (Design-to-Code / Architecture mode – optional)
+# Create an OAuth app at https://www.figma.com/developers/apps to get client id/secret.
+# FIGMA_CLIENT_ID=
+# FIGMA_CLIENT_SECRET=
+# FIGMA_REDIRECT_URI=http://localhost:3000/api/figma/callback
 
 #   NODE_ENV=production
 #   CORS_ORIGINS=https://your-frontend-domain.com
@@ -57,6 +71,7 @@ DB_PATH=./data/grump.db
 
 # Redis (optional; rate limiting, cache, BullMQ)
 REDIS_HOST=
+# REDIS_PORT: Redis server port (default: 6379)
 REDIS_PORT=6379
 REDIS_PASSWORD=
 
@@ -85,7 +100,7 @@ GRUMP_WEBHOOK_URLS=
 # Agent governance – block or strictly control Moltbot/OpenClaw and similar AI agents
 # AGENT_ACCESS_POLICY: block (default) | allowlist | audit_only
 # AGENT_ALLOWLIST: comma-separated agent IDs (only when allowlist policy)
-# AGENT_RATE_LIMIT_PER_HOUR: max requests per allowlisted agent (default: 10)
+# AGENT_RATE_LIMIT_PER_HOUR: max requests per allowlisted agent (default: 10, range: 1-1000)
 # FREE_AGENT_ENABLED: when true, backend runs in full-agent mode (all tools, no approval gates for G-Rump app requests)
 AGENT_ACCESS_POLICY=block
 AGENT_ALLOWLIST=
@@ -99,8 +114,17 @@ GRUMP_USE_WASM_INTENT=
 # Offload intent parsing to worker pool (true/1); worker runs CLI
 GRUMP_USE_WORKER_POOL_INTENT=
 
+# Auth – OAuth redirects (optional; defaults use PORT and localhost)
+# PUBLIC_BASE_URL: Backend base URL for OAuth callback (e.g. http://localhost:3000)
+# FRONTEND_URL: Frontend base URL after OAuth (e.g. http://localhost:5173)
+# GITHUB_OAUTH_REDIRECT_URL / DISCORD_OAUTH_REDIRECT_URL: Override callback URLs if needed
+PUBLIC_BASE_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:5173
+# GITHUB_OAUTH_REDIRECT_URL=
+# DISCORD_OAUTH_REDIRECT_URL=
+
 # Supabase (leave as-is for mock mode, or replace with real credentials)
-# SUPABASE_ANON_KEY used for Google OAuth in Electron; see docs/GOOGLE_AUTH_SETUP.md
+# SUPABASE_ANON_KEY used for Google/GitHub/Discord OAuth; enable providers in Supabase Dashboard
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_KEY=your-service-key
@@ -147,7 +171,9 @@ NOTION_REDIRECT_URI=http://localhost:5173/notion/callback
 
 # Docker Sandbox (for code execution - optional)
 DOCKER_HOST=unix:///var/run/docker.sock
+# SANDBOX_TIMEOUT_MS: Max execution time in milliseconds (default: 60000, range: 5000-300000)
 SANDBOX_TIMEOUT_MS=60000
+# SANDBOX_MEMORY_LIMIT: Container memory limit (e.g., 256m, 512m, 1g)
 SANDBOX_MEMORY_LIMIT=512m
 
 # Security scan root – restrict paths for /api/security/*; default is process.cwd()
