--- a/packages/rag/package.json
+++ b/packages/rag/package.json
@@ -7,7 +7,12 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": { ".": { "types": "./dist/index.d.ts", "import": "./dist/index.js" } },
-  "scripts": { "build": "tsc", "type-check": "tsc --noEmit" },
+  "scripts": {
+    "build": "tsc",
+    "type-check": "tsc --noEmit",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix"
+  },
   "devDependencies": { "typescript": "^5.3.0" },
   "files": ["dist"]
 }
