--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -14,6 +14,9 @@
   },
   "scripts": {
     "build": "tsc",
+    "type-check": "tsc --noEmit",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
