--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,8 +1,12 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
+  "installCommand": "cd .. && pnpm install",
+  "buildCommand": "cd .. && pnpm run build",
   "rewrites": [
-    { "source": "/(.*)", "destination": "/api/index" }
+    {
+      "source": "/(.*)",
+      "destination": "/api/index"
+    }
   ],
   "functions": {
     "api/index.ts": {
