--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-    "installCommand": "pnpm install",
+    "installCommand": "corepack enable && corepack prepare pnpm@9.15.0 --activate && pnpm install --frozen-lockfile",
     "buildCommand": "pnpm run build"
 }
