--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
-    "installCommand": "corepack enable && corepack prepare pnpm@9.15.0 --activate && pnpm install --frozen-lockfile",
-    "buildCommand": "pnpm run build"
+    "framework": "vite",
+    "installCommand": "corepack enable && corepack prepare pnpm@8.15.4 --activate && pnpm install",
+    "buildCommand": "pnpm run build",
+    "outputDirectory": "dist"
 }
