fix: Remove invalid constModules config and unsupported --strip-leading-paths flag from SWC build
- Remove constModules.globals from .swcrc (invalid format: expected map, got string)
- Remove --strip-leading-paths flag from build script (not supported in @swc/cli@0.1.65)

These changes fix the Docker build failure caused by SWC compilation errors.

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "start": "node --import tsx src/index.ts",
     "start:prod": "node dist/index.js",
     "dev": "tsx watch src/index.ts",
-    "build": "swc src -d dist --copy-files --strip-leading-paths --config-file .swcrc && node scripts/copy-migrations.mjs",
+    "build": "swc src -d dist --copy-files --config-file .swcrc && node scripts/copy-migrations.mjs",
     "build:tsc": "tsc && node scripts/copy-migrations.mjs",
     "bundle": "node scripts/esbuild-bundle.mjs",
     "bundle:windows": "node scripts/esbuild-bundle.mjs --platform=win32 --arch=x64",
