fix: Supabase deploy - URL validation, clear errors, skip getDb() in lifecycle
- Validate SUPABASE_URL is project API URL (not dashboard); throw clear error
- Detect HTML/404 response and surface helpful message for wrong URL
- Add databaseSupportsRawDb(); skip goal repo, cost tracking init, workers when Supabase
- Document SUPABASE_URL format in .env.example and DEPLOYMENT.md troubleshooting
- Add tests for invalid URL and HTML response

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -125,6 +125,7 @@ FRONTEND_URL=http://localhost:5173
 
 # Supabase (leave as-is for mock mode, or replace with real credentials)
 # SUPABASE_ANON_KEY used for Google/GitHub/Discord OAuth; enable providers in Supabase Dashboard
+# SUPABASE_URL must be your project API URL (e.g. https://YOUR_PROJECT_REF.supabase.co), NOT the dashboard URL
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_KEY=your-service-key
