fix: copy skill manifest.json files to dist for Docker builds
- Update copy-migrations.mjs to also copy skill manifest.json files
- Fixes ERR_MODULE_NOT_FOUND for skills in production Docker containers
- Add installer staging scripts and .gitignore entries
- Sync various TypeScript fixes for Supabase deployment

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,10 @@ aux
 *.swp
 *.swo
 
+# Installer staging and output
+installer/stage/
+installer/Output/
+
 # Optional: uncomment if you don't want to track these
 # data/
 # backend/data/
