Alerting: env config (ALERTING_*), skip DB check when SUPABASE_URL set; NIM 404 note

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -204,6 +204,14 @@ SENTRY_DSN=
 # Enable Sentry debug mode for development testing
 SENTRY_DEBUG=false
 
+# Alerting thresholds (optional; reduce noise on small instances / Supabase)
+# ALERTING_HIGH_MEMORY_THRESHOLD: 0=disable, 85=default, 99=only at 99%
+# ALERTING_HIGH_ERROR_RATE_THRESHOLD: 0=disable, 5=default %, 100=effectively disable
+# ALERTING_DATABASE_FAILURE: false=skip DB connectivity check (use with Supabase)
+# ALERTING_HIGH_MEMORY_THRESHOLD=99
+# ALERTING_HIGH_ERROR_RATE_THRESHOLD=100
+# ALERTING_DATABASE_FAILURE=false
+
 # Rate Limiting Configuration (optional; defaults work well for most deployments)
 # Override global rate limits:
 # RATE_LIMIT_GLOBAL_WINDOW_MS=900000
