--- a/backend/package.json
+++ b/backend/package.json
@@ -55,6 +55,7 @@
     "cors": "^2.8.5",
     "cron-parser": "^4.9.0",
     "csrf-csrf": "^4.0.3",
+    "csurf": "^1.11.0",
     "discord.js": "^14.16.0",
     "dotenv": "^16.4.5",
     "express": "^5.2.1",
