--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -21,8 +21,8 @@
     "assumeChangesOnlyAffectDirectDependencies": true,
     "allowJs": true,
     "checkJs": false,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
     "incremental": true,
     "tsBuildInfoFile": "./.tsbuildinfo",
@@ -35,22 +35,42 @@
     "strictFunctionTypes": true,
     "strictBindCallApply": true,
     "strictPropertyInitialization": true,
-    "noUncheckedIndexedAccess": true,
+    "noUncheckedIndexedAccess": false,
     "skipDefaultLibCheck": true,
     "exactOptionalPropertyTypes": false,
     "useUnknownInCatchVariables": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@middleware/*": ["./src/middleware/*"],
-      "@services/*": ["./src/services/*"],
-      "@routes/*": ["./src/routes/*"],
-      "@db/*": ["./src/db/*"],
-      "@utils/*": ["./src/utils/*"],
-      "@types/*": ["./src/types/*"],
-      "@config/*": ["./src/config/*"],
-      "@skills/*": ["./src/skills/*"],
-      "@features/*": ["./src/features/*"]
+      "@/*": [
+        "./src/*"
+      ],
+      "@middleware/*": [
+        "./src/middleware/*"
+      ],
+      "@services/*": [
+        "./src/services/*"
+      ],
+      "@routes/*": [
+        "./src/routes/*"
+      ],
+      "@db/*": [
+        "./src/db/*"
+      ],
+      "@utils/*": [
+        "./src/utils/*"
+      ],
+      "@types/*": [
+        "./src/types/*"
+      ],
+      "@config/*": [
+        "./src/config/*"
+      ],
+      "@skills/*": [
+        "./src/skills/*"
+      ],
+      "@features/*": [
+        "./src/features/*"
+      ]
     }
   },
   "include": [
