--- a/packages/rag/package.json
+++ b/packages/rag/package.json
@@ -6,13 +6,28 @@
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "exports": { ".": { "types": "./dist/index.d.ts", "import": "./dist/index.js" } },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
   "scripts": {
     "build": "tsc",
     "type-check": "tsc --noEmit",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix"
   },
-  "devDependencies": { "typescript": "^5.3.0" },
-  "files": ["dist"]
+  "dependencies": {
+    "web-tree-sitter": "^0.24.7"
+  },
+  "optionalDependencies": {
+    "tree-sitter-wasms": "^0.1.11"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.0"
+  },
+  "files": [
+    "dist"
+  ]
 }
